<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="240dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/colorLightGreen">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/select_count"
        android:textSize="20sp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginBottom="6dp"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="16dp"
        android:foreground="?attr/selectableItemBackground"
        android:background="@drawable/background_light_yellow">

        <Button
            android:id="@+id/button_random_25_quizzes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/random_25_quizzes"
            android:textSize="18sp" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_margin="4dp"
        android:foreground="?attr/selectableItemBackground"
        android:background="@drawable/background_light_yellow">

        <Button
            android:id="@+id/button_random_50_quizzes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/random_50_quizzes"
            android:textSize="18sp" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_margin="4dp"
        android:foreground="?attr/selectableItemBackground"
        android:background="@drawable/background_light_yellow">

        <Button
            android:id="@+id/button_random_100_quizzes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/random_100_quizzes"
            android:textSize="18sp" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_margin="4dp"
        android:foreground="?attr/selectableItemBackground"
        android:background="@drawable/background_light_yellow">

        <Button
            android:id="@+id/button_random_200_quizzes"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:padding="12dp"
            android:text="@string/random_200_quizzes"
            android:textSize="18sp" />

    </FrameLayout>

</LinearLayout>